--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle, and by interpretation of the physical dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor of $10^{61}$, resolving at last the vacuum energy dilemma. 
 %An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the %Eddington's one, which is the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter %existence. 
 %The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle %period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to %the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying %the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by %the cosmic microwave Grandcosmos radiation. 
-The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with  the Atiyah's constant, showing Four Force Unification. A $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Koide relation, massive gluons and composite d quark will deblock Particle Physics while the mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded on the imperfect cosmological principle.
+The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with  the Atiyah's constant, showing Four Force Unification. A $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Koide relation, massive gluons and composite d quark will deblock Particle Physics while the mature galaxies will be found in the far-field instead of a dark space, rejecting thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
 
 %% TODO: Insérer axe topologique
 }}\smallskip
@@ -1079,7 +1079,7 @@ W \approx 137^{2} \Gamma / 3d_{e}
 \end{equation}
 This value is confirmed in the ppb range by:
 \begin{equation}
-\piW^{14}/3 \approx \beta 496^7 O_M
+\pi W^{14}/3 \approx \beta 496^7 O_M
 \end{equation}
 confirming the holic attribution (section 6) of power 7 for field parameter, and the central role of the dimension 496.
 \begin{equation}
