--- a/main.tex
+++ b/main.tex
@@ -1079,37 +1079,37 @@ W \approx 137^{2} \Gamma / 3d_{e}
 \end{equation}
 This value is confirmed in the ppb range by:
 \begin{equation}
-\pi W^{14}/3 \approx \beta 496^7 O_M
+\pi W^{14}/3 \beta \approx 496^7 O_M
 \end{equation}
-confirming the holic attribution (section 6) of power 7 for field parameter, and the central role of the dimension 496.
+confirming the holic attribution (section 6) of power 7 for a field parameter, and the central role of the dimension 496.
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
 this value is confirmed by its ppb liaison with the pariah group $J_3$
 \begin{equation}
-J_3 \approx 3\pi^2 Z^2 / (137^2 + \sqrt{1+d_e}
+J_3 \approx 3\pi^2 Z^2 / (137^2 + \sqrt{1+d_e})
 \end{equation}
 This enligth a liaison between the monster and the $J_3$ cardinals, while these two groups have no known relations:
 \begin{equation}
 O_M \approx d_e J_3^7 sqrt(p/p_0)
 \end{equation}
-\textit{The very existence of so precise ppb relations confirms there exists a Final}. The following section indicates additive hints towards this Final Theory.
+\textit{The very existence of so precise ppb relations confirms there exists a Final Thory involvoing the sporadic groups}. The following section indicates additive hints towards this Final Theory.
 
 
 \subsection {The Heavy Leptons Fine-Tuning}
-The standard model is unable to explain why there are three famillies of particle. thus the study of the muon and tau mass ratioes is crucial. The study of Kotov period shows. Now, the Koide relation \cite{Koide}, which has a mathematical justification in term of circulating matrix, correctly predicted $\tau$ at an epoch during which its measurement was false to 3 $\sigma$. It can be wrote:
+The standard model is unable to explain why there are three famillies of particles. Thus, the study of the muon and tau mass ratios is crucial. Now, the following Koide relation \cite{Koide}, which has a mathematical justification in term of circulating matrix, correctly predicted $\tau$ at an epoch (around 2001) during which its measurement was false to 3 $\sigma$. It can be wrote:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
-Now the Koide constant $p_K \approx 1842.604994$ verifies (2 et 0.16 ppm):
+This Koide constant, that no one noticed, $p_K \approx 1842.604994$ has been detected in Eq. (39), which means that, to 2 ppm (with an additive term at 0.16 ppm):
 \begin{equation}
 p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 (137a/136(a^{\prime}-1) d_e
 \end{equation}
-With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm:
+With the above $\mu$ value, $\tau is \approx 3477.441701$, a value which obeys, to 0.7 and -0.8 ppm:
 \begin{equation}
 e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2 
 \end{equation}
-resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
+resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining an Brout-Englert-Higgs ratio $s$:
 $$
 \begin{array}{ll}
 %
@@ -1117,7 +1117,7 @@ $$
 F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 
 \end{array}
 $$
-(0.7 ppm, 0.3 \%, 0.1 \%. Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4  \% and 30 ppb):
+(0.7 ppm, 0.3 \%, 0.1 \%. Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4 \% and 30 ppb):
 $$ F/137 \approx \Pi_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5}$$ 
 
  With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(11) (0.5, 17 and 40 ppm):
