--- a/main.tex
+++ b/main.tex
@@ -736,17 +736,17 @@ the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, 
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
 
-\subsection{Holic Principle in Cosmic Coherent Oscillation}
+\subsection{The Cosmic Coherent Oscillation and the Holic Principle}
 
-While the HB entropy of the shere of radius $R^{\prime} = 2r_e)^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos(section 3), verifies the relation:
+While the HB entropy of the sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos (section 3), verifies the relation:
 \begin{equation}
 \pi(R^{\prime}/l_P)^2 = (pi/2)(R^{\prime}/r_e)^3 
 \end{equation}
 With a wrong geometric coefficient, the HB entropy of the visible Universe shows a nearly geometric term, with imprecion $\sqrt{4/3\delta} \approx 0.17$:
 \begin{equation}
-pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3 
+\pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3 
 \end{equation}
-This is an holographic conservation concerning the half-sphere of the visible universe. By analogy with the above scanning process filling the whole sphere (section 3), the above Kotov length $l_k$ (section 4.3) permits to fill the whole sphere by obeying two holographic relations (0.90 \% and 2.6 \%):
+which is an holographic conservation concerning \textit{the half-sphere of the visible universe}. By analogy with the above scanning process filling the whole sphere (section 3), the above Kotov length $l_k$ (section 4.3) permits to introduce two holographic relations, involving the whole sphere (0.90 \% and 2.6 \%):
 \begin{equation}
 \pi(R/l_K)^2 \approx 2\pi l_K/r_e 
 \end{equation}
@@ -763,7 +763,18 @@ Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_
 \begin{equation}
 r_/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
 \end{equation}
-The section 9.5 will show their holic liaison with the Monster group order.
+The above term $R_1l_K/R^{\prime}r_e$ is close to $\sqrtO_M$ (1\%). The study of deviation, taking account of Eq.() shows the intermediate bosons ratios $W$ and $Z$, specified in section 9.4, leading to (-4 and 3.5 ppm):
+\begin{equation}
+O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
+\end{equation}
+\begin{equation}
+ (F^3R_1 / 2 a^3R^{\prime})^2 \approx Z^4 (a/137)(p_0/p)^2
+\end{equation}
+Thus, Eq. () is completed by (0.3 and -0.4 ppm)
+\begin{equation}
+137 p_0 W^2 Z^2/p a_w^2 \approx \sqrtO_M /(2a^2 P) \approx e^{-4a}
+\end{equation}
+this precises a known relation in Particle Theory.
 
 \section{Intermediate Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
