--- a/main.tex
+++ b/main.tex
@@ -763,7 +763,7 @@ Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_
 \begin{equation}
 r_/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
 \end{equation}
-The above term $R_1l_K/R^{\prime}r_e$ is close to $\sqrtO_M$ (1\%). The study of deviation, taking account of Eq.() shows the intermediate bosons ratios $W$ and $Z$, specified in section 9.4, leading to (-4 and 3.5 ppm):
+The above term $R_1l_K/R^{\prime}r_e$ is close to $\sqrt{O_M}$ (1\%). The study of deviation, taking account of Eq.(), shows the intermediate bosons ratios $W$ and $Z$, specified in section 9.4, leading to (-4 and 3.5 ppm):
 \begin{equation}
 O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
 \end{equation}
