--- a/main.tex
+++ b/main.tex
@@ -772,7 +772,7 @@ O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
 \end{equation}
 Thus, Eq. () is completed by (0.3 and -0.4 ppm)
 \begin{equation}
-137 p_0 W^2 Z^2/p a_w^2 \approx \sqrtO_M /(2a^2 P) \approx e^{-4a}
+137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
 \end{equation}
 this precises a known relation in Particle Theory.
 
