--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@ The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, impl
 
 Contents
 
-1. Deterministic Computation and Hierarchical Principle
+1. Deterministic Computation and Hierarchy Principle
 
 2. The Cosmic Fine-Tuning and the Topological Axis
 
@@ -136,7 +136,7 @@ Contents
  12. Predictions
     
 
-\section{Deterministic Computation and Hierarchical Principle}
+\section{Deterministic Computation and Hierarchy Principle}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Eddy}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
@@ -153,7 +153,7 @@ The present article shows that \textit{Physics is an unique part of Mathematics,
 
 The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, is hierarchic: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
-So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liaison with the above Hierarchical Principle.
+So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liaison with the above Hierarchy Principle.
 
 
 
@@ -254,7 +254,7 @@ the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambd
 R/2\lambdabar_{H} = (M/m^{\prime}_{e})^{1/2} = \hbar c/G m_{e} m_{p}
 \end{equation}
 \textit{This is the definitive interpretation of the Double Large Number Fine-tuning}. So, while the two
-pillars of Physics, Relativity and Quantum Theory are unable to reconcile Gravitation and Particle
+pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
 Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology \cite{Eddy}.
 
 Recall that, contrary to what is often stated, quantum physics does not limit to micro-physics.
@@ -289,7 +289,7 @@ of galaxy groups, with time constant $R/c$ being compensated by the appearance o
 neutrons at rate $c^{3} /Gm_{n}$, corresponding to about one neutron by century in a cathedral volume. The invariant visible Universe radius $R$ is then defined by the
 Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of
 critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
-Principle, until now devoted to 3D application only \cite{Bousso}:
+Principle, untill now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
@@ -592,7 +592,7 @@ which are the most pertinent in the considered domain. This Prospective Dimensio
 largely used in Fluid Mechanics, were the equations are intractable, but is largely ignored in other
 domains, because there is no real mathematical foundation, apart the above essential remarks, except for the triplet $c, G, \hbar$ which define the above Planck units. 
 
-But, in virtue of the above Hierarchical Principle, the lack of theoretical justification is not a reason to
+But, in virtue of the above Hierarchy Principle, the lack of theoretical justification is not a reason to
 neglect Prospective Dimensional Analysis. 
 
 The elimination of $c$ in the above $R$ formula means that the simplest basic dimensional
@@ -1156,6 +1156,12 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
 \end{equation}
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
+From the observation (0.04 \% and 3\%):
+\begin{equation}
+\tau^137 \approx \mu^210 /4\pi \approx O_M^9
+\end{equation}
+the Extended Holic Principle (section 6) cannot be denied. Moreover with $\pi_0 = (7(35^2-1) -(2^7 - 1)/3 \times 7 \times 2^7), where the Combinatorial Hierarchy terms appear, the deviation reduces to 112 ppb; \textit{the intervention of \pi - rationalisation cannot be denied}.
+
 
 \section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
