--- a/main.tex
+++ b/main.tex
@@ -1160,7 +1160,7 @@ From the observation (0.04 \% and 3\%):
 \begin{equation}
 \tau^137 \approx \mu^210 /4\pi \approx O_M^9
 \end{equation}
-the Extended Holic Principle (section 6) cannot be denied. Moreover with $\pi_0 = (7(35^2-1) -(2^7 - 1)/3 \times 7 \times 2^7)$, where the Combinatorial Hierarchy terms appear, the deviation reduces to 112 ppb; \textit{the intervention of \pi - rationalisation cannot be denied}.
+the Extended Holic Principle (section 6) cannot be denied. Moreover, with $\pi_0 = (7(35^2-1)-(2^7-1)/3 \times 7 \times 2^7)$, where the Combinatorial Hierarchy terms appear, the deviation reduces to 112 ppb; the intervention of $\pi$ - rationalisation cannot be denied.
 
 
 \section {Discussion}
