--- a/main.tex
+++ b/main.tex
@@ -1158,9 +1158,9 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
 From the observation (0.04 \% and 3\%):
 \begin{equation}
-\tau^137 \approx \mu^210 /4\pi \approx O_M^9
+\tau^{137} \approx \mu^{210} /4\pi \approx O_M^9
 \end{equation}
-the Extended Holic Principle (section 6) cannot be denied. Moreover, with $\pi_0 = (7(35^2-1)-(2^7-1)/3 \times 7 \times 2^7)$, where the Combinatorial Hierarchy terms appear, the deviation reduces to 112 ppb; the intervention of $\pi$ - rationalisation cannot be denied.
+the Extended Holic Principle (section 6) cannot be denied. Moreover, with $\pi_0 = (7(35^2-1)-(2^7-1)/3 \times 7 \times 2^7)$, where the Combinatorial Hierarchy terms appear, the deviation reduces to 112 ppb; \textit{the intervention of $\pi$ - rationalisation cannot be denied}.
 
 
 \section {Discussion}
