--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@ The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, impl
 
 Contents
 
-1. Deterministic Computation and Hierarchy Principle
+1. Deterministic Computation and Principle of Hierarchy
 
 2. The Cosmic Fine-Tuning and the Topological Axis
 
@@ -136,7 +136,7 @@ Contents
  12. Predictions
     
 
-\section{Deterministic Computation and Hierarchy Principle}
+\section{Deterministic Computation and Principle of Hierarchy}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Eddy}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
@@ -147,13 +147,13 @@ So Eddington considered rightly the Cosmic Large Number correlations, as recalle
 
 The present article shows that \textit{Physics is an unique part of Mathematics, which are presently uncomplete}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
 
-\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why does people ask questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and three-point temperatures of mammals and main molecules \cite{Sanchez1}.
+\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and three-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the Copenhagen statistical interpretation of quantum mechanics.
 
-The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, is hierarchic: \textit{one can progress without knowing the details of the underlying fundamental theory.}
+The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, follows a hierarchical order: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
-So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liaison with the above Hierarchy Principle.
+So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liaison with the above Principle of Hierarchy.
 
 
 
