--- a/main.tex
+++ b/main.tex
@@ -59,9 +59,8 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
 The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle, and by interpretation of the physical dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor of $10^{61}$, resolving at last the vacuum energy dilemma. 
-%An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the %Eddington's one, which is the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter %existence. 
-%The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle %period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to %the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying %the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by %the cosmic microwave Grandcosmos radiation. 
-The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with  the Atiyah's constant, showing Four Force Unification. A $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Koide relation, massive gluons and composite d quark will deblock Particle Physics while the mature galaxies will be found in the far-field instead of a dark space, rejecting thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
+The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with  the Atiyah's constant, showing Four Force Unification. 
+A $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed, the Pionner acceleration, the Koide relation, massive gluons and composite d quark will deblock Particle Physics while the mature galaxies will be found in the far-field instead of a dark space, rejecting thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
 
 %% TODO: Insérer axe topologique
 }}\smallskip
@@ -79,55 +78,55 @@ The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, impl
 
 Contents
 
-1. Deterministic Computation and Principle of Hierarchy
+1. Principles of Hierarchy and Deterministic Computation
 
 2. The Cosmic Fine-Tuning and the Topological Axis
 
-3. Toponic Holographic Quantification
+3. The Toponic Holographic Quantification
 
-4. Tachyonic Flickering Space-Time-Matter}
+4. the Tachyonic Flickering Space-Time-Matter}
 
-~~~   4.1. Single Electron Cosmolopgy
+~~~   4.1. The Single Electron Cosmology
    
 ~~~    4.2. The Coherent Cosmic Oscillation
    
-~~~    4.3. Kotov observations
+~~~    4.3. The Kotov observations
    
-~~~    4.4 Tifft, Arp and Pionner effects
+~~~    4.4 the Tifft, Arp and Pionner effects
    
 5. The Logic of Dimensional Analysis
 
-6. Arithmetical Logic: Holic Principle
+6. The Arithmetical Logic: Holic Principle
 
 7. The Special Holographic Relations
 
-~~~    7.1. Conservation of Information
+~~~    7.1. The Conservation of Information
    
 ~~~    7.2. The Cosmic Special Holographic Relation
 
-~~     7.3. Holic Principle in Cosmic Coherent Oscillation 
+~~     7.3. The Holic Principle in Cosmic Coherent Oscillation 
     
 8. The role of Intermediary Mathematical Constants
 
-~~~    8.1. Eddington's constant 137
+~~~    8.1. The Eddington's constant 137
    
-~~~    8.2. Atiyah and syterheimer constants
+~~~    8.2. the Atiyah and Sternheimer constants
    
-~~~    8.3. Ubiquity of $a^a$
+~~~    8.3. The ubiquity of $a^a$
    
 ~~~    8.4. The Sporadic Groups
    
- 9. fine-Tuning with basic mathematical constants
+ 9. Fine-Tuning with basic mathematical constants
  
-~~~    9.1. Otimal Basis $e$ confirmed
+~~~    9.1. The Otimal Base $e$ is confirmed
    
-~~~    9.2. Lenz-Wyler's Formula
+~~~    9.2. The Lenz-Wyler's Formula
    
-~~~    9.3. Archimedes constant $\pi$ is a calculation basis
+~~~    9.3. the Archimedes constant $\pi$ is a calculation base
    
-~~~    9.4. Four Force Unification ppb Fine-Tuning
+~~~    9.4. The Four Force Unification in ppb Fine-Tuning
    
-~~~    9.5. Heavy Leptons Fine-Tuning
+~~~    9.5. The Heavy Leptons Fine-Tuning
    
  10. Discussion
  
@@ -136,12 +135,12 @@ Contents
  12. Predictions
     
 
-\section{Deterministic Computation and Principle of Hierarchy}
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Eddy}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
+\section{Principles of Hierarchy and Deterministic Computation}
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
-The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first \cite{Eddy}, must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology, the basis of Coherent Cosmology \cite{Sanchez1}.
+The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first \cite{Eddy}, must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the basis of Coherent Cosmology \cite{Sanchez1}.
 
 So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
@@ -153,7 +152,7 @@ The present article shows that \textit{Physics is an unique part of Mathematics,
 
 The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, follows a hierarchical order: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
-So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liaison with the above Principle of Hierarchy.
+So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liaison with the above Principle of Hierarchy, which seems at first sight contradictory with the Principe of Computation. 
 
 
 
@@ -200,6 +199,7 @@ $\lambdabar_{e} = \hbar/cm_{e}$
 is the Electron Compton reduced wavelength, and the
 gravitational coupling constant is: 
 $a_{G} = \hbar c/Gm_{p}m_{H}$
+where $m_p$ and $m_H$ are the proton and hydrogen atom masses.
 So, \textit{the speed $c$ is eliminated}, in accordance with
 Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement \cite{Bonvin}: 72(3) (km/s)/Megaparsec, which confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$, value.
@@ -229,7 +229,7 @@ dramatic appearance of the Eddington Large Number.
 
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation which is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we infer 
 $
-R/r_H \approx (4\pi \lambda_{CMB} /r)^{4}
+R/r_H \approx (4\pi \lambda_{CMB} /r_H)^{4}
 $ 
 precise to $0.6\%$. 
 Considering the standard cosmological neutrino background (CNB), which wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $R/ \lambdabar_{e} \approx
@@ -244,11 +244,11 @@ the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
 \begin{equation}
 R/(\lambdabar_{p}\lambdabar_{H})^{1/2}\approx (WZ)^4
 \end{equation}
-where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula will be pulled to the ppb range in section 4, by intervention of canonical mathematical constants.
+where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula will be pulled to the ppb range in section 9.4, by intervention of canonical mathematical constants.
 
 The gravitational Hydrogen molecule model \cite{Sanchez1} implies the following double correlation,
 which is the simplest case of Eddington's statistical theory \cite{Eddy}: the position of a `reference particle`
-is supposed to be determined with an uncertainty of ${R/2}$. For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $m^{\prime}_{e} = m_{e} p/H$, and if, moreover, we equate
+is supposed to be determined with an uncertainty of ${R/2}$. For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $ m = m^{\prime}_{e} = m_{e} p/H$, and if, moreover, we equate
 the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
 \begin{equation}
 R/2\lambdabar_{H} = (M/m^{\prime}_{e})^{1/2} = \hbar c/G m_{e} m_{p}
@@ -261,7 +261,7 @@ Recall that, contrary to what is often stated, quantum physics does not limit to
 Indeed the exclusion principle applies in both solid state physics and in stellar physics. In particular,
 for a star containing $N_s$ atoms, in which the pressure has reached the quantum degenerancy value
 (case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$
-\cite{Sanchez1}.So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole
+\cite{Sanchez1}. So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole
 century, was already contained in astrophysics textbooks. The universe radius amazingly appears as
 the limit of a mono-atomic star radius, for which the electrons are in degeneracy state. Eddingon was
 aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the
@@ -275,7 +275,7 @@ to reintroduce the Einstein cosmological constant with invariant value $1/R^{2}$
 
 The distance for which this force exceeds attractive
 gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, which corresponds, in the Topological
-Axis, to the Atiyah Constant $\Gamma$, presented in the Section3. 4, see Fig 1.
+Axis, to the Atiyah Constant $\Gamma$, presented in the Section 8.2, see Fig 1.
 
 In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
@@ -288,7 +288,7 @@ Principle implies the invariance of the Universe mean mass density $\rho$ and th
 of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive
 neutrons at rate $c^{3} /Gm_{n}$, corresponding to about one neutron by century in a cathedral volume. The invariant visible Universe radius $R$ is then defined by the
 Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of
-critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
+critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `Topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
 Principle, untill now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
@@ -324,7 +324,7 @@ of radius $R^{\prime}$ appears as the spherical hologram representation of the o
 \begin{equation}
 S^{\prime}_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
 \end{equation}
-This value will be dramaticaly confirmed in the section 2.4. (Fig.6).
+This value will be dramaticaly confirmed in the section 5 (Fig.6).
 
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
 of the mass-equivalent $M$ of the visible Universe: $m = M/N_{m}$, and its canonical wavelength is $N_m \lambdabar_{M}$,
@@ -347,12 +347,7 @@ With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that
 Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n 
 \end{equation}
 showing a kind of symmetry between the Particle masses.
-
-Coming back to the central mass relation:
-\begin{equation}
-m_{P}^{4}\, = M m_{e} m_{p} m_{H}
-\end{equation}
-this directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except
+This directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except
 that it is close to the mass of the human ovocyte \cite{Sanchez1}. In this way, the local inertia is related to the distant
 masses, in accordance with the Mach principle, which the relativity theory does not explain.
 Another shortcoming of this theory is that it does not define any inertial frame. However, the
@@ -361,7 +356,9 @@ Doppler assymmetry of the cosmic background indicates that the speed of our loca
 
 The mathematical continuity is excluded by the above Computation Principle, so the time associated
 to the above 'topon' 
-$$\lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s$$
+\begin{equation}
+t_M = \lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s 
+\end{equation}
 is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz $ \cite{Sanchez2}.
 
