--- a/main.tex
+++ b/main.tex
@@ -298,8 +298,8 @@ uses the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
 
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions
 of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation
-hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
-furnished by the above very definition of $R$.
+hypothesis, which is unnecessary in the steady-state model. Indeed, the critical condition is
+provided by the above very definition of $R$.
 
 The cosmic wavelength $\lambdabar_{M}\sim 10^{-95} m$ breaks the `Planck's wall` by a factor $l_{P}/\lambdabar_{M}\sim 10^{61}$ : this explains why this holographic relation was long time unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact \textit{the Planck's length is an intermediate holographic length only}.
 
@@ -346,7 +346,7 @@ With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that
 \begin{equation}
 Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n 
 \end{equation}
-showing a kind of symmetry between the Particle masses.
+showing a kind of symmetry between the masses of particles .
 This directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except
 that it is close to the mass of the human ovocyte \cite{Sanchez1}. In this way, the local inertia is related to the distant
 masses, in accordance with the Mach principle, which the relativity theory does not explain.
