--- a/main.tex
+++ b/main.tex
@@ -1067,7 +1067,7 @@ Note that the strong force parameter $f$ is represented by the Bizouard formula:
 \begin{equation}
 F/\sqrt(pH) \approx 2\pi fpH/F
 \end{equation}
-The following weak boson ratios $W$ and $$Z match (Eq.1):
+The following weak boson ratios $W$ and $Z$ match (Eq.1):
 $R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$
 \textit{in the ppb range}. For the charged boson: 
 \begin{equation}
