--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,7 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 \hfill To the memory of Sir Michael Atiyah\\
 The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle, and by interpretation of the physical dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor of $10^{61}$, resolving at last the vacuum energy dilemma. 
 The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with  the Atiyah's constant, showing Four Force Unification. 
-A $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed, the Pionner acceleration, the Koide relation, massive gluons and composite d quark will deblock Particle Physics while the mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded on the imperfect cosmological principle.
+A $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed, the Koide-Sanchez constant, massive gluons and composite d quark will deblock Particle Physics while the mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded on the imperfect cosmological principle.
 
 %% TODO: Insérer axe topologique
 }}\smallskip
