--- a/main.tex
+++ b/main.tex
@@ -84,7 +84,7 @@ Contents
 
 3. The Toponic Holographic Quantification
 
-4. the Tachyonic Flickering Space-Time-Matter}
+4. The Tachyonic Flickering Space-Time-Matter}
 
 ~~~   4.1. The Single Electron Cosmology
    
@@ -135,7 +135,7 @@ Contents
  12. Predictions
     
 
-\section{Principles of Hierarchy and Computation}
+\section{The Principles of Hierarchy and Computation}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
@@ -281,7 +281,7 @@ In the steady-state cosmology, such a repulsive force between galaxy groups is n
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
 another evacuation mechanism must occur: \textit{it would be the role of massive black holes}.
 
-\section{Toponic Holographic Quantification}
+\section{The Toponic Holographic Quantification}
 
 In the steady-state cosmologic model of Bondi, Gold and Hoyle \cite{Sanchez1}, the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
@@ -362,12 +362,12 @@ t_M = \lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s
 is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz $ \cite{Sanchez2}.
 
-\section{Tachyonic Flickering Space-Time-Matter}
+\section{The Tachyonic Flickering Space-Time-Matter}
 
 The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The
 matter-antimatter flickering respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry.
 
-\subsection{Single Electron Cosmology}
+\subsection{The Single Electron Cosmology}
 
 The single-electron cosmology \cite{Sanchez1} uses the electron indeterminacy, which is the real basis of the
 Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$, by respect to $\lambdabar_e$. 
@@ -439,7 +439,7 @@ G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 \end{array}$$
 This value will be confirmed, in the ppb range, in Section 4.
 
-\subsection{Kotov cycle omnipresence in astrophysics}
+\subsection{The Kotov cycle omnipresence in astrophysics}
 
 With $t = R/c$, the relation $(t t_{K}^2)^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
@@ -536,7 +536,7 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \label{fig:figure_label}
 \end{figure}
 
-\subsection{The Tifft, Arp and the Pioneer effects}
+\subsection{The Tifft, Arp and Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this
 speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{Sanchez1}.
@@ -662,8 +662,6 @@ where the above Tifft factor $F/a$ appears. The implication of the time
 $t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
 confirms the above Planck's wall breakdown.
 
-
-
 \section{The Arithmetical Logic: Holic Principle}
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
@@ -686,7 +684,7 @@ Principle involves a field term $F^{7}$, and so introduces the dimension $30 \ti
 $$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
 where appear the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
 
-\section{Special holographic relations}
+\section{The special holographic relations}
 The holographic technique is by far the most efficient way to treat huge information, based on the
 properties of a coherent wave. Now, the main lesson of modern physics is that everything (light and matter) propagates by waves  (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism: it has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction by a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section 4.1) and graviton has been proposed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
 
